Added Discord link to application

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,7 +14,7 @@ params:
 
         **TicTacToe** is a **Discord bot** that lets Discord users play tic tac toe together.
       
-        You can find more information about the bot **[here](https://nickkoepr.nl/)**! 
+        You can find more information about the bot **[here](https://discord.com/application-directory/914110118998732811)**! 
 
   socialIcons:
     - name: "github"
