Added privacy policy and terms of service
Also changed a small thing in the configuration

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,7 +12,7 @@ params:
     Content: > 
        👋 Welcome!
 
-        **TicTacToe** is a **Discord bot** that lets Discord users play tic tac toe together.
+        **TicTacToe** is a **Discord bot** that lets Discord users play TicTacToe together.
       
         You can find more information about the bot **[here](https://discord.com/application-directory/914110118998732811)**! 
 
